fix: 빌드 시점에도 ZGC 옵션을 명시